<resources>
    <string name="app_name">My Application</string>
    <string name="introduzca_su_id">Introduzca su ID</string>
    <string name="usuario">Usuario</string>

    <string name="nombre">Nombre</string>
    <string name="apellido_paterno">Apellido Paterno</string>
    <string name="fecha_de_nacimiento">Fecha de nacimiento</string>

    <string name="apellido_materno">Apellido Materno</string>
    <string name="contrase_a">Contraseña</string>

    <string name="docente">DOCENTE</string>
    <string name="alumno">ALUMNO</string>
    <string name="seleccione_su_tipo_de_usuario">Seleccione su tipo de usuario</string>


    <string name="ingresar">Ingresar</string>
    <string name="registrar">Registrar</string>
    <string name="todo">TODO</string>
    <string name="title_activity_docente_menu">AscesoMA</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="fecha_de_asesoria">Fecha de asesoria</string>
    <string name="seleccione_la_fecha">Seleccione la fecha:</string>
    <string name="ingrese_la_hora_de_inicio">Ingrese la hora de inicio</string>
    <string name="ingrese_la_hora_final">Ingrese la hora final</string>
    <string name="introduzca_el_cubiculo">Introduzca el cubiculo</string>
    <string name="numero_maximo_de_alumnos">Numero maximo de alumnos</string>
    <string name="guias" />
    <string name="title_activity_alumno_menu">activity_alumno_menu</string>
</resources>
