<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mac1.myapplication.ActivityRegistroMaestro">

    <EditText
        android:id="@+id/txt_idP"
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="21dp"
        android:hint="@string/introduzca_su_id"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_nombreP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_idP"
        android:layout_marginTop="17dp"
        android:hint="@string/nombre"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_apellidoPp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_nombreP"
        android:layout_marginTop="18dp"
        android:hint="@string/apellido_paterno"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_apellidoMp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_apellidoPp"
        android:layout_marginTop="17dp"
        android:hint="@string/apellido_materno"
        android:inputType="text" />

    <EditText
        android:id="@+id/txt_fnacP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_apellidoMp"
        android:layout_marginTop="20dp"
        android:hint="@string/fecha_de_nacimiento"
        android:inputType="date" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_fnacP"
        android:layout_marginTop="19dp"
        android:hint="@string/usuario"
        android:inputType="text"
        android:id="@+id/txt_usuarioP" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txt_usuarioP"
        android:layout_marginTop="16dp"
        android:hint="@string/contrase_a"
        android:inputType="textPassword"
        android:id="@+id/editText10" />

    <Button
        android:id="@+id/button_registrarP"
        android:layout_width="90dp"
        android:layout_height="37dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:hint="@string/registrar"
        android:textColorHint="@color/colorAccent"
        android:background="@color/colorPrimary"
        android:onClick="onClick"/>


</RelativeLayout>
