<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.mac1.myapplication.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="140dp"
        android:layout_height="56dp"
        android:layout_alignBottom="@+id/buttonDocente"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/buttonDocente"
        android:text="@string/docente"
        android:textColor="@color/NEGRO" />

    <ImageView
        android:id="@+id/buttonDocente"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_above="@+id/buttonAlumno"
        android:layout_alignParentStart="true"
        android:layout_gravity="start"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="15dp"
        android:onClick="onClick"
        android:src="@drawable/maestro" android:contentDescription="@string/todo" />

    <ImageView
        android:id="@+id/buttonAlumno"
        android:layout_width="200dp"
        android:layout_height="160dp"
        android:layout_alignBottom="@+id/textView3"
        android:layout_alignStart="@+id/buttonDocente"
        android:src="@drawable/estudiante" android:contentDescription="@string/todo"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="105dp"
        android:layout_height="56dp"
        android:layout_alignBottom="@+id/buttonAlumno"
        android:layout_alignStart="@+id/textView"
        android:layout_marginBottom="48dp"
        android:text="@string/alumno"
        android:textColor="@color/NEGRO" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="60dp"
        android:layout_marginEnd="19dp"
        android:text="" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/seleccione_su_tipo_de_usuario"
        android:textColor="@color/colorPrimary" />

</RelativeLayout>


